New Theme For Go Laundry Driver

--- a/LaundaryGODriver/Views/Order_Header/AwaitPickupList.cshtml
+++ b/LaundaryGODriver/Views/Order_Header/AwaitPickupList.cshtml
@@ -5,15 +5,15 @@
 }
 
 @section head{
-	<link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet"> -->
 	<!-- DataTables CSS -->
-	<link href="/theme/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet"> -->
 	<!-- DataTables Responsive CSS -->
-	<link href="/theme/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet"> -->
 	<!-- Custom CSS -->
-	<link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet">
+	<!-- <link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet"> -->
 	<!-- Custom Fonts -->
-	<link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
 
 }
 <div class="row">
@@ -171,18 +171,18 @@
 </div>
 @section foot{
 	<!-- DataTables JavaScript -->
-	<script src="/theme/vendor/datatables/js/jquery.dataTables.min.js"></script>
-	<script src="/theme/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-	<script src="/theme/vendor/datatables-responsive/dataTables.responsive.js"></script>
+	<!-- <script src="/theme/vendor/datatables/js/jquery.dataTables.min.js"></script> -->
+	<!-- <script src="/theme/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script> -->
+	<!-- <script src="/theme/vendor/datatables-responsive/dataTables.responsive.js"></script> -->
 	<!-- Custom Theme JavaScript -->
-	<script src="/theme/dist/js/sb-admin-2.js"></script>
+	<!-- <script src="/theme/dist/js/sb-admin-2.js"></script> -->
 	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
-	<script>
+	<!-- <script>
 		$(document).ready(function () {
 			$('#dataTables-example').DataTable({
 				responsive: true
 			});
 		});
-	</script>
+	</script> -->
 
 }
