--- a/LaundaryGODriver/Views/Order_Header/Index.cshtml
+++ b/LaundaryGODriver/Views/Order_Header/Index.cshtml
@@ -5,183 +5,153 @@
 }
 
 @section head{
-	<link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet"> -->
 	<!-- DataTables CSS -->
-	<link href="/theme/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet"> -->
 	<!-- DataTables Responsive CSS -->
-	<link href="/theme/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet"> -->
 	<!-- Custom CSS -->
-	<link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet">
+	<!-- <link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet"> -->
 	<!-- Custom Fonts -->
-	<link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
 
 }
-<div class="row">
-	<div class="col-lg-12">
-		<h1 class="page-header">Order</h1>
 
-	</div>
-	<!-- /.col-lg-12 -->
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				List of Orders
-			</div>
-			<!-- /.panel-heading -->
-			<div class="panel-body">
-		
-				<table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-					<thead>
-						<tr>
-							<th>
-								@Html.DisplayNameFor(model => model.cust_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.pickup_dri_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.sp_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.status_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_weight)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_pickup_add)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_deliver_add)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.deliver_dri_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.deliver_dri_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.request_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.awaiting_pickup_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.pickup_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.washing_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.washing_completed_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.delivering_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.delivered_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_amount)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.payment_method)
-							</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody>
-						@foreach (var item in Model)
+
+<!-- start content -->
+        <!-- Header -->
+        <div class="header bg-gradient-warning pb-8 pt-5 pt-md-8">
+            <div class="container-fluid">
+                <div class="header-body">
+                
+                </div>
+            </div>
+        </div>
+        <!-- Page content -->
+        <div class="container-fluid mt--7">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-light" id="myTable">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">
+                    
+                                    </th>
+                                    <th scope="col">Customer Name</th>
+                                    <th scope="col">Pickup Driver Name</th>
+                                    <th scope="col">SP Name</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Order Weight</th>
+                                    <th scope="col">Order Pickup Add</th>
+                                    <th scope="col">Order Deliver Add</th>
+                                    <th scope="col">Deliver Driver Id</th>
+                                    <th scope="col">Deliver Driver Name</th>
+                                    <th scope="col">Request Time</th>
+                                    <th scope="col">Awaiting Pickup Time</th>
+                                    <th scope="col">Pickup Time</th>
+                                    <th scope="col">Washing Time</th>
+                                    <th scope="col">Washing Completed Time</th>
+                                    <th scope="col">Delivering Time</th>
+                                    <th scope="col">Delivered Time</th>
+                                    <th scope="col">Order Amount</th>
+                                    <th scope="col">Payment Method</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+								@foreach (var item in Model)
 						{
-							<tr>
-								<td>
-									@Html.DisplayFor(modelItem => item.cust_name)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.deliver_dri_name)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.sp_name)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.status_name)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.order_weight)
-								</td>
-								<td>
-									<a href="http://maps.google.com/maps?q=@Html.DisplayFor(modelItem => item.order_pickup_add)" target="_blank">View</a>
-								</td>
-								<td>
-									<a href="http://maps.google.com/maps?q=@Html.DisplayFor(modelItem => item.order_deliver_add)" target="_blank">View</a>
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.deliver_dri_id)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.deliver_dri_name)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.request_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.awaiting_pickup_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.pickup_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.washing_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.washing_completed_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.delivering_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.delivered_time)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.order_amount)
-								</td>
-								<td>
-									@Html.DisplayFor(modelItem => item.payment_method)
-								</td>
-								<td>
-								<a asp-action="ToAwaitPickUpList" asp-route-id="@item.order_id">Answer</a>
-								@*<a asp-action="Details" asp-route-id="@item.order_id">Details</a> |
-					<a asp-action="Delete" asp-route-id="@item.order_id">Delete</a>*@
-								</td>
-							</tr>
-						}
-					</tbody>
-				</table>
-				<!-- /.table-responsive -->
-
-			</div>
-			<!-- /.panel-body -->
-		</div>
-		<!-- /.panel -->
-	</div>
-	<!-- /.col-lg-12 -->
-</div>
-@section foot{
-	<!-- DataTables JavaScript -->
-	<script src="/theme/vendor/datatables/js/jquery.dataTables.min.js"></script>
-	<script src="/theme/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-	<script src="/theme/vendor/datatables-responsive/dataTables.responsive.js"></script>
-	<!-- Custom Theme JavaScript -->
-	<script src="/theme/dist/js/sb-admin-2.js"></script>
-	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
-	<script>
-		$(document).ready(function () {
-			$('#dataTables-example').DataTable({
-				responsive: true
-			});
-		});
-	</script>
-
-}
+                                <tr>
+                                    <td>
+                                        <div class="dropdown">
+                                            <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown"
+                                                aria-haspopup="true" aria-expanded="false">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">Another action</a>
+                                                <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+										@Html.DisplayNameFor(model => model.cust_name)	
+                                    </td>
+                                    <td>
+										@Html.DisplayNameFor(model => model.pickup_dri_name)
+                                    </td>
+                                    <td>
+                    					@Html.DisplayNameFor(model => model.sp_name)
+                                    </td>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="mr-2">60%</span>
+                                            <div>
+                                                <div class="progress">
+                                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60"
+                                                        aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>					@Html.DisplayNameFor(model => model.status_id)
+                                    </td>
+                                    <td>
+                    					@Html.DisplayNameFor(model => model.order_weight)
+                                    </td>
+                                    <td class="text-right">
+                    					@Html.DisplayNameFor(model => model.order_pickup_add)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.order_deliver_add)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.deliver_dri_id)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.deliver_dri_name)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.request_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.awaiting_pickup_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.pickup_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.washing_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.washing_completed_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.delivering_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.delivered_time)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.order_amount)
+                                    </td>
+                                    <td class="">
+                    					@Html.DisplayNameFor(model => model.payment_method)
+                                    </td>
+                                </tr>
+                    		}
+                            </tbody>
+                        </table>
+                    
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-xl-8 mb-5 mb-xl-0">
+                    
+                </div>
+                <div class="col-xl-4">
+                    
+                </div>
+            </div>
+        </div>
+        <!-- end content -->
