--- a/LaundaryGODriver/Views/Order_Header/Requested.cshtml
+++ b/LaundaryGODriver/Views/Order_Header/Requested.cshtml
@@ -1,15 +1,30 @@
 ﻿
 @{
-    Layout = null;
+   ViewData["Title"] = "Requested";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Requested</title>
-</head>
-<body>
-</body>
-</html>
+<!-- start content -->
+        <!-- Header -->
+        <div class="header bg-gradient-warning pb-8 pt-5 pt-md-8">
+            <div class="container-fluid">
+                <div class="header-body">
+                
+                </div>
+            </div>
+        </div>
+        <!-- Page content -->
+        <div class="container-fluid mt--7">
+            <div class="row">
+                <div class="col-xl-12">
+                    
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-xl-8 mb-5 mb-xl-0">
+                    
+                </div>
+                <div class="col-xl-4">
+                    
+                </div>
+            </div>
+        </div>
+        <!-- end content -->
