--- a/LaundaryGODriver/Views/Shared/_Layout.cshtml
+++ b/LaundaryGODriver/Views/Shared/_Layout.cshtml
@@ -1,207 +1,270 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<!-- Bootstrap Core CSS -->
-	<link href="/theme/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<!-- MetisMenu CSS -->
-	<link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
-	<!-- Custom CSS -->
-	<link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet">
-	<!-- Morris Charts CSS -->
-	<link href="/theme/vendor/morrisjs/morris.css" rel="stylesheet">
-	<!-- Custom Fonts -->
-	<link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-	<title>@ViewData["Title"] - LaundryGoSP</title>
-	@RenderSection("head", false)
-	<environment include="Development">
-		@*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-			<link rel="stylesheet" href="~/css/site.css" />*@
-	</environment>
-	<environment exclude="Development">
-		@*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-						asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-						asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-			<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />*@
-	</environment>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Syahrin Seth">
+  <title>@ViewData["Title"] - LaundryGoSP</title>
+  <!-- Favicon -->
+  <!-- <link href="/assets/img/brand/favicon.png" rel="icon" type="image/png"> -->
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+  <!-- Icons -->
+  <link href="/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="/assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link type="text/css" href="assets/css/datatables.css" rel="stylesheet">
+  <!-- Argon CSS -->
+  <link type="text/css" href="/assets/css/argon.css?v=1.0.0" rel="stylesheet">
+  @RenderSection("head", false)
 </head>
+
 <body>
-	<div id="wrapper">
-		<!-- Navigation -->
-		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index.html">Laundry Go - @Context.User.Identity.Name</a>
-			</div>
-			<!-- /.navbar-header -->
-			<ul class="nav navbar-top-links navbar-right">
+  <!-- Sidenav -->
+  <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
+    <div class="container-fluid">
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Brand -->
+      <a class="navbar-brand pt-0" href="/index.html">
+        Go Laundry: Driver
+      </a>
+      <!-- User -->
+      <ul class="nav align-items-center d-md-none">
+        <li class="nav-item dropdown">
+          <a class="nav-link nav-link-icon" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="ni ni-bell-55"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="media align-items-center">
+              <span class="avatar avatar-sm rounded-circle">
+                <img alt="Image placeholder" src="/assets/img/theme/team-1-800x800.jpg">
+              </span>
+            </div>
+          </a>
+          <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
+            <div class=" dropdown-header noti-title">
+              <h6 class="text-overflow m-0">My profile</h6>
+            </div>
+            <a href="/examples/profile.html" class="dropdown-item">
+              <i class="ni ni-single-02"></i>
+              <span>Settings</span>
+            </a>
+            <a href="/examples/profile.html" class="dropdown-item">
+              <i class="ni ni-settings-gear-65"></i>
+              <span>Activity</span>
+            </a>
+            <a href="/examples/profile.html" class="dropdown-item">
+              <i class="ni ni-calendar-grid-58"></i>
+              <span>Support</span>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" asp-controller="Home" asp-action="Logout">
+              <i class="ni ni-user-run"></i>
+              <span>Logout</span>
+            </a>
+          </div>
+        </li>
+      </ul>
+      <!-- Collapse -->
+      <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+        <!-- Collapse header -->
+        <div class="navbar-collapse-header d-md-none">
+          <div class="row">
+            <div class="col-6 collapse-brand">
+              <a href="/index.html">
+                <img src="/assets/img/brand/blue.png">
+              </a>
+            </div>
+            <div class="col-6 collapse-close">
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle sidenav">
+                <span></span>
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Form -->
+        <form class="mt-4 mb-3 d-md-none">
+          <div class="input-group input-group-rounded input-group-merge">
+            <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Search" aria-label="Search">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                <span class="fa fa-search"></span>
+              </div>
+            </div>
+          </div>
+        </form>
+        <!-- Navigation -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Home">
+              <i class="ni ni-tv-2 text-primary"></i> Dashboard
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Order_Header" asp-action="BackRequest">
+              <i class="ni ni-planet text-blue"></i> Request
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Order_Header" asp-action="Index">
+              <i class="ni ni-pin-3 text-orange"></i> Awaiting
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Order_Header" asp-action="Index">
+              <i class="ni ni-single-02 text-yellow"></i> Pick Up
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Order_Header" asp-action="WashingCompletedList">
+              <i class="ni ni-bullet-list-67 text-red"></i> Washing Completed
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Order_Header" asp-action="DeliveringList">
+              <i class="ni ni-key-25 text-info"></i> Delivering
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-controller="Home" asp-action="Logout">
+              <i class="ni ni-circle-08 text-pink"></i> Logout
+            </a>
+          </li>
+        </ul>
+        <!-- Divider -->
+        
+      </div>
+    </div>
+  </nav>
+  <!-- Main content -->
+  <div class="main-content">
+    <!-- Top navbar -->
+    <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+      <div class="container-fluid">
+        <!-- Brand -->
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/index.html">Dashboard</a>
+        <!-- Form -->
+        <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
+          <div class="form-group mb-0">
+            <div class="input-group input-group-alternative">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-search"></i></span>
+              </div>
+              <input class="form-control" placeholder="Search" type="text">
+            </div>
+          </div>
+        </form>
+        <!-- User -->
+        <ul class="navbar-nav align-items-center d-none d-md-flex">
+          <li class="nav-item dropdown">
+            <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="media align-items-center">
+                <span class="avatar avatar-sm rounded-circle">
+                  <img alt="Image placeholder" src="/assets/img/theme/team-4-800x800.jpg">
+                </span>
+                <div class="media-body ml-2 d-none d-lg-block">
+                  <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
+                </div>
+              </div>
+            </a>
+            <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
+              <div class=" dropdown-header noti-title">
+                <h6 class="text-overflow m-0">Welcome!</h6>
+              </div>
+              <a href="/examples/profile.html" class="dropdown-item">
+                <i class="ni ni-single-02"></i>
+                <span>My profile</span>
+              </a>
+              <a href="/examples/profile.html" class="dropdown-item">
+                <i class="ni ni-settings-gear-65"></i>
+                <span>Settings</span>
+              </a>
+              <a href="/examples/profile.html" class="dropdown-item">
+                <i class="ni ni-calendar-grid-58"></i>
+                <span>Activity</span>
+              </a>
+              <a href="/examples/profile.html" class="dropdown-item">
+                <i class="ni ni-support-16"></i>
+                <span>Support</span>
+              </a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" asp-controller="Home" asp-action="Logout">
+                <i class="ni ni-user-run"></i>
+                <span>Logout</span>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+	@RenderBody()
+  </div>
+    <br><br><br>
+      <div class="container-fluid mt--7">
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="row align-items-center justify-content-xl-between">
+          <div class="col-xl-6">
+            <div class="copyright text-center text-xl-left text-muted">
+              &copy; 2018 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <ul class="nav nav-footer justify-content-center justify-content-xl-end">
+              <li class="nav-item">
+                <a href="https://www.creative-tim.com" class="nav-link" target="_blank">Go Laundry Driver</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </div>
+  <!-- Argon Scripts -->
 
-				<!-- /.dropdown -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
-					</a>
-					<ul class="dropdown-menu dropdown-tasks">
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 1</strong>
-										<span class="pull-right text-muted">40% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-											<span class="sr-only">40% Complete (success)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 2</strong>
-										<span class="pull-right text-muted">20% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-											<span class="sr-only">20% Complete</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 3</strong>
-										<span class="pull-right text-muted">60% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-											<span class="sr-only">60% Complete (warning)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 4</strong>
-										<span class="pull-right text-muted">80% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-											<span class="sr-only">80% Complete (danger)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a class="text-center" href="#">
-								<strong>See All Tasks</strong>
-								<i class="fa fa-angle-right"></i>
-							</a>
-						</li>
-					</ul>
-					<!-- /.dropdown-tasks -->
-				</li>
-				<!-- /.dropdown -->
-				<!-- /.dropdown -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-					</a>
-					<ul class="dropdown-menu dropdown-user">
-						<li>
-							<a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-						</li>
-						<li>
-							<a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-						</li>
-					</ul>
-					<!-- /.dropdown-user -->
-				</li>
-				<!-- /.dropdown -->
-			</ul>
-			<!-- /.navbar-top-links -->
-			<div class="navbar-default sidebar" role="navigation">
-				<div class="sidebar-nav navbar-collapse">
-					<ul class="nav" id="side-menu">
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="Index"><i class="fa fa-shopping-cart"></i>Request</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="AwaitPickupList"><i class="fa fa-shopping-cart"></i>Awaiting Pickup</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="PickupList"><i class="fa fa-shopping-cart"></i>Pick Up</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="WashingCompletedList"><i class="fa fa-shopping-cart"></i>Washing Completed</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="DeliveringList"><i class="fa fa-shopping-cart"></i>Delivering</a></li>
-						<li><a asp-area="" asp-controller="Home" asp-action="Logout"><i class="fa fa-sign-out "></i> Logout</a></li>
+@RenderSection("foot", false)
+  <!-- Core -->
+  <script src="/assets/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Optional JS -->
+  <script src="/assets/vendor/chart.js/dist/Chart.min.js"></script>
+  <script src="/assets/vendor/chart.js/dist/Chart.extension.js"></script>
+  <!-- Argon JS -->
+  <script src="/assets/js/argon.js?v=1.0.0"></script>
+  <!-- Datatables -->
+    <script src="assets/js/datatables.js"></script>
+  <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+  </script>
 
-					</ul>
-				</div>
-				<!-- /.sidebar-collapse -->
-			</div>
-			<!-- /.navbar-static-side -->
-		</nav>
-		<div id="page-wrapper">
-			@RenderBody()
-		</div>
-		<!-- /#page-wrapper -->
-	</div>
-	<script src="/theme/vendor/jquery/jquery.min.js"></script>
-	<!-- Bootstrap Core JavaScript -->
-	<script src="/theme/vendor/bootstrap/js/bootstrap.min.js"></script>
-	<!-- Metis Menu Plugin JavaScript -->
-	<script src="/theme/vendor/metisMenu/metisMenu.min.js"></script>
-	<!-- Morris Charts JavaScript -->
-	<script src="/theme/vendor/raphael/raphael.min.js"></script>
-	<script src="/theme/vendor/morrisjs/morris.min.js"></script>
-	@RenderSection("foot", false)
-
-	<environment include="Development">
-		@*<script src="~/lib/jquery/dist/jquery.js"></script>
-			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-			<script src="~/js/site.js" asp-append-version="true"></script>*@
-	</environment>
-	<environment exclude="Development">
-		@*<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-							asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-							asp-fallback-test="window.jQuery"
-							crossorigin="anonymous"
-							integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-			</script>
-			<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-							asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-							asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-							crossorigin="anonymous"
-							integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-			</script>
-			<script src="~/js/site.min.js" asp-append-version="true"></script>*@
-	</environment>
-
-	@RenderSection("Scripts", required: false)
+  @RenderSection("Scripts", required: false)
 </body>
+
 </html>
+
+
+
+
